# snowc2

./: README.md  docs.md
snowflakec2/: Cargo.toml  bot.py
snowflakec2/src/: main.rs
snowflakec2/src/apis/: server.rs
snowflakec2/src/communicating/: handler.rs  types.rs
snowflakec2/src/core/: state.rs
snowflakec2/src/modules/: download.rs  execute.rs  loader.rs  mod.rs  ping.rs  types.rs
