[package]
name = "modular-c2-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version =  "1.44.2", features = ["rt-multi-thread", "full", "io-util", "net"] }
anyhow = "1.0.98"
uuid = { version = "1.16.0", features = ["v4"] }
axum = "0.8.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
async-trait = "0.1.88"
